--- a/portal_objects/software.yaml
+++ b/portal_objects/software.yaml
@@ -83,3 +83,16 @@ category:
   - Variant Calling
 # Required for displaying in the file name
 code: rufus
+
+---
+
+################################################################
+# RUFUS, d1.1.3
+################################################################
+name: RUFUS
+version: 'd1.1.3'
+source_url: https://github.com/stefinfection/RUFUS
+category:
+  - Variant Calling
+# Required for displaying in the file name
+code: rufus
